# PackageResolver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: cli.h  colors.h  constraint.h  exceptions.h  graph.h  installer.h  json_parser.h  manifest.h  package.h  registry.h  resolver.h  version.h
registry/cache/: 1.0.0.json
registry/crypto/: 3.1.0.json
registry/database/: 2.3.0.json
registry/http-client/: 1.5.0.json
registry/json-parser/: 2.0.1.json
registry/logger/: 1.0.0.json
registry/orm/: 1.1.0.json
registry/web-framework/: 1.2.0.json
sample_project/: manifest.json
src/: cli.cpp  constraint.cpp  graph.cpp  installer.cpp  json_parser.cpp  main.cpp  manifest.cpp  package.cpp  registry.cpp  resolver.cpp  version.cpp
tests/: test_constraint.cpp  test_framework.h  test_graph.cpp  test_main.cpp  test_resolver.cpp  test_version.cpp
